# FluidML

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt  setup.py
benchmark/: CMakeLists.txt  bert.cpp  convbert.cpp  efficientnet.cpp  gptneox.cpp  ibert.cpp  vgg.cpp
cmake/: models.cmake  options.cmake
include/evaluation/: dp.h  eval.h  fwd.h  utils.h
include/exception/: unimplemented_exception.h  unreachable_exception.h
include/optimization/: manager.h  pass.h
include/optimization/graph/: add_div_erf_add_mul_fusion.h  gather_add_fusion.h  manager.h  pass.h  unsqueeze_sub_mul_fusion.h
include/structure/context/: attr.h  context.h  factory.h  fwd.h
include/structure/flow/: edge.h  flow.h  fwd.h  node.h  object.h  region.h  sequence.h
include/structure/graph/: attribute.h  def.h  edge.h  fwd.h  graph.h  node.h
include/structure/kernel/: add.h  add_div_erf_add_mul_mul.h  div.h  erf.h  gather.h  gather_add_add.h  gemm.h  kernel.h  layer_normalization.h  layernormalization.h  matmul.h  mul.h  pow.h  reshape.h  softmax.h  split.h  sub.h  tanh.h  transpose.h  unsqueeze.h  unsqueeze_sub_mul.h  where.h
include/structure/kernel/generator/: add.h  add_div_erf_add_mul_mul.h  averagepool.h  cast.h  clip.h  concat.h  conv.h  cum_sum.h  div.h  dropout.h  equal.h  erf.h  flatten.h  gather.h  gather_add_add.h  gemm.h  generator.h  layer_normalization.h  matmul.h  maxpool.h  mul.h  neg.h  not.h  pad.h  pow.h  reduce_mean.h  relu.h  reshape.h  slice.h  softmax.h  sqrt.h  squeeze.h  sub.h  tanh.h  transpose.h  unsqueeze.h  unsqueeze_sub_mul.h  where.h
include/structure/kernel/kernel/: add.h  add_div_erf_add_mul_mul.h  averagepool.h  cast.h  clip.h  concat.h  conv.h  cum_sum.h  div.h  dropout.h  equal.h  erf.h  flatten.h  gather.h  gather_add_add.h  gemm.h  kernel.h  layer_normalization.h  matmul.h  maxpool.h  mul.h  neg.h  not.h  pad.h  pow.h  reduce_mean.h  relu.h  reshape.h  slice.h  softmax.h  split.h  sqrt.h  squeeze.h  sub.h  tanh.h  transpose.h  unsqueeze.h  unsqueeze_sub_mul.h  utils.h  where.h
include/structure/memory/: greedy.h  index.h  info.h  linear.h  plan.h
include/structure/tensor/: meta.h  tensor.h
include/utils/: float.h  hash.h  isa.hpp  type.h  utils.h
include/worker/: builder.h  converter.h  evaluator.h  executor.h  fwd.h  lower.h  parser.h  planner.h  runner.h  scheduler.h  utils.h  worker.h
src/: CMakeLists.txt
src/evaluation/: dp.cpp  eval.cpp  utils.cpp
src/exception/: unimplemented_exception.cpp  unreachable_exception.cpp
src/optimization/graph/: add_div_erf_add_mul_fusion.cpp  gather_add_fusion.cpp  manager.cpp  unsqueeze_sub_mul_fusion.cpp
src/python/: cpu_transformers.pyi  pybind.cpp
src/structure/context/: attr.cpp  context.cpp  factory.cpp
src/structure/flow/: edge.cpp  flow.cpp  node.cpp  region.cpp  sequence.cpp
src/structure/graph/: attribute.cpp  edge.cpp  graph.cpp  node.cpp
src/structure/kernel/: add.cpp  add_div_erf_add_mul_mul.cpp  div.cpp  erf.cpp  gather.cpp  gather_add_add.cpp  gemm.cpp  kernel.cpp  layer_normalization.cpp  layernormalization.cpp  matmul.cpp  mul.cpp  pow.cpp  reshape.cpp  softmax.cpp  split.cpp  sub.cpp  tanh.cpp  transpose.cpp  unsqueeze.cpp  unsqueeze_sub_mul.cpp  utils.cpp  where.cpp
src/structure/kernel/generator/: add.cpp  add_div_erf_add_mul_mul.cpp  averagepool.cpp  cast.cpp  clip.cpp  concat.cpp  conv.cpp  cum_sum.cpp  div.cpp  dropout.cpp  equal.cpp  erf.cpp  flatten.cpp  gather.cpp  gather_add_add.cpp  gemm.cpp  generator.cpp  layer_normalization.cpp  matmul.cpp  maxpool.cpp  mul.cpp  neg.cpp  not.cpp  pad.cpp  pow.cpp  reduce_mean.cpp  relu.cpp  reshape.cpp  slice.cpp  softmax.cpp  sqrt.cpp  squeeze.cpp  sub.cpp  tanh.cpp  transpose.cpp  unsqueeze.cpp  unsqueeze_sub_mul.cpp  where.cpp
src/structure/kernel/kernel/: add.cpp  add_div_erf_add_mul_mul.cpp  averagepool.cpp  cast.cpp  clip.cpp  concat.cpp  conv.cpp  cum_sum.cpp  div.cpp  dropout.cpp  equal.cpp  erf.cpp  flatten.cpp  gather.cpp  gather_add_add.cpp  gemm.cpp  layer_normalization.cpp  matmul.cpp  maxpool.cpp  mul.cpp  neg.cpp  not.cpp  pad.cpp  pow.cpp  reduce_mean.cpp  relu.cpp  reshape.cpp  slice.cpp  softmax.cpp  split.cpp  sqrt.cpp  squeeze.cpp  sub.cpp  tanh.cpp  transpose.cpp  unsqueeze.cpp  unsqueeze_sub_mul.cpp  utils.cpp  where.cpp
src/structure/memory/: greedy.cpp  index.cpp  info.cpp  linear.cpp
src/structure/tensor/: meta.cpp  tensor.cpp
src/utils/: type.cpp  utils.cpp
src/worker/: builder.cpp  converter.cpp  evaluator.cpp  executor.cpp  lower.cpp  parser.cpp  planner.cpp  runner.cpp  scheduler.cpp  utils.cpp
test/: CMakeLists.txt
test/model/: CMakeLists.txt  model_test.cpp
test/node/: CMakeLists.txt  add1.py  cast.py  constant_of_shape.py  equal.py  erf.py  gather0.py  gather1.py  graph_test.cpp  layer_normalization.py  matmul0.py  mul0.py  node_test.cpp  node_test.py  reshape.py  split.py  sub.py  tanh.py  unsqueeze.py  where.py
test/python/: CMakeLists.txt  import_test.py  model_test.py
test/python/node/: CMakeLists.txt  add0.py  averagepool.py  clip.py  concat.py  conv0.py  conv1.py  conv2.py  cum_sum.py  div0.py  div1.py  dropout.py  equal.py  flatten.py  gather0.py  gather1.py  gather2.py  gather_add_add.py  gemm.py  matmul0.py  matmul1.py  maxpool.py  mul0.py  mul1.py  neg.py  node_test.py  not.py  pad.py  pow.py  reduce_mean.py  relu.py  reshape.py  slice.py  softmax.py  sqrt.py  squeeze.py  sub0.py  sub1.py  transpose.py
test/tensor/: CMakeLists.txt  meta_test.cpp  tensor_test.cpp
test/utils/: CMakeLists.txt  gen_test.cpp  isa_test.cpp
tools/: analyzer.py  drawer.py
